Fixes spacing in forms

--- a/frontend/public/scss/common.scss
+++ b/frontend/public/scss/common.scss
@@ -405,3 +405,7 @@ button.btn-secondary.unstyled {
     }
   }
 }
+
+.form-group {
+  padding-bottom: 1rem;
+}
